style: modify all the product content

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,3 +8,29 @@ html {
   padding: 0;
   font-family: 'Poppins', sans-serif;
 }
+
+.container {
+  width: 100%;
+  min-height: 100vh;
+  background: #d0eaff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.product {
+  width: 90%;
+  max-width: 750px;
+  display: flex;
+}
+
+.gallery {
+  flex-basis: 47%;
+  background: #241e20;
+}
+
+.gallery img {
+  width: 100%;
+  display: block;
+  padding-top: 100px;
+}
