--- a/css/styles.css
+++ b/css/styles.css
@@ -34,3 +34,10 @@ html {
   display: block;
   padding-top: 100px;
 }
+
+.details {
+  flex-basis: 53%;
+  background: #fff;
+  padding: 40px;
+  padding-left: 60px;
+}
