style: modify gallery and details

--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,8 @@ html {
 .gallery {
   flex-basis: 47%;
   background: #241e20;
+  transform: scale(1.08);
+  box-shadow: -10px 5px 10px 10px rgba(0,0,0,0.1);
 }
 
 .gallery img {
@@ -40,4 +42,5 @@ html {
   background: #fff;
   padding: 40px;
   padding-left: 60px;
+  box-shadow: -10px 5px 10px 10px rgba(0,0,0,0.1);
 }
