--- a/css/styles.css
+++ b/css/styles.css
@@ -63,3 +63,33 @@ html {
   color: #00d874;
   margin-bottom: 20px;
 }
+
+.details form {
+  font-size: 15px;
+  font-weight: 400;
+}
+
+.size-select {
+  display: flex;
+  align-items: center;
+  margin-top: 50px;
+}
+
+.size-select p {
+  width: 70px;
+}
+
+.size-select input:checked + span {
+  color: blue;
+  font-weight: 600;
+}
+
+.size-select input {
+  display: none;
+}
+
+.size-select span {
+  padding: 5px;
+  margin-right: 10px;
+  cursor: pointer;
+}
