style: modify submit btn

--- a/css/styles.css
+++ b/css/styles.css
@@ -170,3 +170,19 @@ form button {
   box-shadow: 0 10px 10px rgba(85,63,240,0.25);
   cursor: pointer;
 }
+
+.controls {
+  position: absolute;
+  bottom: 40px;
+  right: 20px;
+}
+
+.btn {
+  display: block;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background: rgba(255,255,255,0.5);
+  margin: 10px;
+  cursor: pointer;
+}
